[gd_scene load_steps=9 format=2]

[ext_resource path="res://Vyfrost/Assets/Theme/VyfrostTheme.tres" type="Theme" id=1]
[ext_resource path="res://Vyfrost/Components/FormElements/ToggleOption.gd" type="Script" id=2]
[ext_resource path="res://Vyfrost/Assets/Font/RedHatMono/ToggleText.tres" type="FontFile" id=3]
[ext_resource path="res://Vyfrost/Assets/Theme/Button/Activated/ActivatedButtonStylebox-Disabled.tres" type="StyleBox" id=4]
[ext_resource path="res://Vyfrost/Assets/Theme/Button/Activated/ActivatedButtonStylebox-Hover-Focused.tres" type="StyleBox" id=5]
[ext_resource path="res://Vyfrost/Assets/Theme/Button/Activated/ActivatedButtonStylebox-Normal.tres" type="StyleBox" id=6]
[ext_resource path="res://Vyfrost/Assets/Theme/Button/Activated/ActivatedButtonStylebox-Pressed.tres" type="StyleBox" id=7]
[ext_resource path="res://Vyfrost/Assets/Font/RedHatMono/ToggleText-Activated.tres" type="FontFile" id=8]

[node name="Toggle" type="HBoxContainer"]
offset_right = 80.0
offset_bottom = 16.0
theme = ExtResource( 1 )
theme_override_constants/separation = 6
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
offset_top = 2.0
offset_bottom = 14.0

[node name="OFF" type="Button" parent="."]
offset_left = 6.0
offset_right = 34.0
offset_bottom = 16.0
custom_minimum_size = Vector2( 24, 0 )
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource( 3 )
text = "OFF"

[node name="ON" type="Button" parent="."]
visible = false
offset_left = 36.0
offset_right = 60.0
offset_bottom = 16.0
custom_minimum_size = Vector2( 24, 0 )
mouse_default_cursor_shape = 2
theme_override_colors/font_disabled_color = Color( 0.145098, 0.168627, 0.176471, 1 )
theme_override_colors/font_focus_color = Color( 0.145098, 0.231373, 0.247059, 1 )
theme_override_colors/font_color = Color( 0.145098, 0.231373, 0.247059, 1 )
theme_override_colors/font_hover_color = Color( 0.145098, 0.231373, 0.247059, 1 )
theme_override_colors/font_pressed_color = Color( 0.145098, 0.231373, 0.247059, 1 )
theme_override_fonts/font = ExtResource( 8 )
theme_override_styles/hover = ExtResource( 5 )
theme_override_styles/pressed = ExtResource( 7 )
theme_override_styles/focus = ExtResource( 5 )
theme_override_styles/disabled = ExtResource( 4 )
theme_override_styles/normal = ExtResource( 6 )
text = "ON"

[connection signal="focus_entered" from="OFF" to="." method="_on_OFF_focus_entered"]
[connection signal="mouse_entered" from="OFF" to="." method="_on_OFF_mouse_entered"]
[connection signal="pressed" from="OFF" to="." method="_on_OFF_pressed"]
[connection signal="focus_entered" from="ON" to="." method="_on_ON_focus_entered"]
[connection signal="mouse_entered" from="ON" to="." method="_on_ON_mouse_entered"]
[connection signal="pressed" from="ON" to="." method="_on_ON_pressed"]
